add common actions

--- a/src/BMC.StreamProcessor/BMC.StreamProcessor.csproj
+++ b/src/BMC.StreamProcessor/BMC.StreamProcessor.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\Gravicode.ExpressionEvaluator\Gravicode.ExpressionEvaluator.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="email.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
