--- a/src/BMC.CloudIoT/appsettings.Development.json
+++ b/src/BMC.CloudIoT/appsettings.Development.json
@@ -38,8 +38,9 @@
   },
   "App": {
     "CheckQRUrl": "https://CamObserver.Web.online/checkqr?code=",
-    "DefaultPass": "354jaya"
-
+    "DefaultPass": "354jaya",
+    "MqttHost": "cloud.iot.my.id",
+    "MqttPort": "1883"
   },
   "GmapKey": "AIzaSyDpqcgMnKf1TnQPRQKNmlnUgqh_EI0t_Iw"
 }
