--- a/src/BMC.MessageBroker/BMC.MessageBroker.csproj
+++ b/src/BMC.MessageBroker/BMC.MessageBroker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -10,5 +10,28 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="MQTTnet" Version="4.1.0.247" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
+	  <PackageReference Include="System.Data.Common" Version="4.3.0" />
+	  <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+	  <PackageReference Include="System.IO.Packaging" Version="4.7.0" />
+	  <PackageReference Include="System.Net.Http.Formatting.Extension" Version="5.2.3" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BMC.Models\BMC.Models.csproj" />
+    <ProjectReference Include="..\Gravicode.Tools\Gravicode.Tools.csproj" />
+  </ItemGroup>
+	<ItemGroup>
+		<Reference Include="GemBox.Document">
+			<HintPath>..\Dependencies\GemBox.Document.dll</HintPath>
+		</Reference>
+		<Reference Include="GemBox.Spreadsheet">
+			<HintPath>..\Dependencies\GemBox.Spreadsheet.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 </Project>
