--- a/src/BMC.CloudIoT/appsettings.Development.json
+++ b/src/BMC.CloudIoT/appsettings.Development.json
@@ -39,7 +39,7 @@
   "App": {
     "CheckQRUrl": "https://CamObserver.Web.online/checkqr?code=",
     "DefaultPass": "354jaya",
-    "MqttHost": "cloud-iot.my.id",
+    "MqttHost": "cloud-iot.my.id / 103.250.10.88",
     "MqttPort": "1883"
   },
   "GmapKey": "AIzaSyDpqcgMnKf1TnQPRQKNmlnUgqh_EI0t_Iw"
