--- a/src/BMC.StreamHub/appsettings.json
+++ b/src/BMC.StreamHub/appsettings.json
@@ -39,7 +39,7 @@
   "App": {
     "CheckQRUrl": "https://CamObserver.Web.online/checkqr?code=",
     "DefaultPass": "354jaya",
-    "MqttHost": "cloud-iot.my.id",
+    "MqttHost": "localhost",
     "MqttPort": "1883"
   },
   "GmapKey": "AIzaSyDpqcgMnKf1TnQPRQKNmlnUgqh_EI0t_Iw"
